nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-service
spec:
  type: NodePort
  selector:
    app: portainer-demo
  ports:
  - nodePort: 30080
    port: 80
    targetPort: 80
