nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: portainer-demo-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: nginx-demo-service
            servicePort: 80
